After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776343 - gst-rtsp-server: TCP transport does not work
gst-rtsp-server: TCP transport does not work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-21 12:59 UTC by Patricia Muscalu
Modified: 2016-12-22 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixed TCP transport case (6.93 KB, patch)
2016-12-21 12:59 UTC, Patricia Muscalu
committed Details | Review

Description Patricia Muscalu 2016-12-21 12:59:06 UTC
Created attachment 342316 [details] [review]
Fixed TCP transport case

The problem occurs when the only allowed lower transport is TCP. In that case
the sending pipeline is not properly link - actually linking appsink to rtpbin
fails because they are not in the same bin.
Comment 1 Sebastian Dröge (slomo) 2016-12-22 12:30:09 UTC
commit 42f270e7f2406ce7080f091abc934f59d139f761
Author: Patricia Muscalu <patricia@axis.com>
Date:   Wed Dec 21 13:41:50 2016 +0100

    rtsp-stream: Fixed TCP transport case
    
    Make sure that the appsink element is actually added to
    the bin before trying to link it with the elements in it.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=776343
Comment 2 Tim-Philipp Müller 2016-12-22 12:40:20 UTC
Would be nice to have a unit test for this too :)
Comment 3 Sebastian Dröge (slomo) 2016-12-22 12:49:15 UTC
Review of attachment 342316 [details] [review]:

::: tests/check/gst/rtspserver.c
@@ +2112,3 @@
   tcase_add_test (tc, test_setup_non_existing_stream);
   tcase_add_test (tc, test_play);
+  tcase_add_test (tc, test_play_tcp);

You mean this test? ;)
Comment 4 Tim-Philipp Müller 2016-12-22 13:02:40 UTC
\o/ 

(erm, yes, just ignore me, thanks)